--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,77 +1,93 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+/* -------- BEGIN CSS RESET -------- */
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
   }
 }
+
+/* -------- END CSS RESET -------- */
+
+:root {
+  --max-width: 2000px;
+  --color-primary: #F8F8FF;
+  --color-secondary: #1D184E;
+  --colour-btn-background: #E1E1FC;
+  --colour-btn-text: #5451FF;
+}
+
+/* ignore the stuff below, just reset stuff */
 
 * {
   box-sizing: border-box;
@@ -83,16 +99,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-weight: 400;
+  line-height: 1.75;
+  color: var(--color-secondary);
+  background: var(--color-primary);
 }
 
 a {
@@ -100,8 +110,210 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+h2 {
+  font-size: 55px;
+  line-height: 75px;
+  padding-bottom: 45px;
+}
+
+h3 {
+  font-size: 43px;
+  font-weight: bold;
+  padding-bottom: -2px;
+}
+
+h4 {
+  font-size: 18px;
+  font-weight: 400;
+  padding-bottom: 20px;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.navbar{
+  width: auto;
+  padding: 15px 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  margin-bottom: 10px;
+}
+
+.navbar__logo {
+  font-weight: 900;
+  font-size: 16px;
+}
+
+.navbar ul {
+  font-weight: 600;
+  display: flex;
+  gap: 30px;
+  list-style-type: none;
+  justify-content: left;
+}
+
+.navbar a {
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.navbar a:hover {
+  color: #5451FF;
+  transition: 0.15s ease-in-out;
+}
+
+.header {
+  min-height: 91vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-primary);
+}
+
+.header__text {
+  margin: 22px 0px 40px 0px;
+}
+
+.btn {
+  border: none;
+  border-radius: 100px;
+  transition: 0.15s ease-in-out;
+  cursor: pointer;
+  background-clip: padding-box;
+}
+
+.btn__header {
+  padding: 21px 58px;
+  margin-top: 10px;
+  font-size: 18px;
+  color: var(--colour-btn-text);
+  background-color: var(--colour-btn-background);
+  border: none;
+  border-radius: 100px;
+}
+
+.btn:hover {
+  color: white;
+  background-color: var(--color-secondary);
+}
+
+.btn__primary {
+  font-size: 16px;
+  margin-top: 35px;
+  padding: 20px 40px;
+  color: var(--colour-btn-text);
+  background-color: #F0F0FF;
+}
+
+.about__container {
+  background-color: white;
+  padding: 80px 0px 90px 0px;
+}
+
+.about {
+  display: flex;
+  margin: auto;
+  max-width: 1240px;
+}
+
+.about__text {
+  margin-right: 100px;
+  line-height: 30px;
+}
+
+.my__work {
+  background-color: var(--color-primary);
+  padding-top: 15px;
+  padding-bottom: 25px;
+}
+
+.my__work__content { 
+  margin: 4px 150px;
+  margin: auto;
+  max-width: 1240px;
+}
+
+.my__work__text {
+  display: block;
+  margin: auto;
+}
+
+.project__text {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.project__container {
+  padding-bottom: 60px;
+  display: flex;
+}
+
+.project__image {
+  display: flex;
+  max-width: auto;
+  height: auto;
+}
+
+.project__left{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.project__right{
+  display: flex;
+}
+
+.project__right__text{
+  padding-left: 100px; 
+}
+
+.project__left__text{
+  padding-right: 100px; 
+}
+
+
+/* .project__text .button{
+  margin-top: 30px;
+  padding: 18px 50px 0px 50px;
+} */
+
+.footer {
+  background-color: white;
+  padding: 50px 0px;
+}
+
+.footer__content {
+  margin: 0px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  line-height: 35px;
+  font-weight: 300;
+}
+
+.footer__content h3 {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.footer__icons__container {
+  display:flex;
+  font-size: 35px;
+  padding-top: 30px;
+}
+
+.footer__icons {
+  padding: 0px 30px;
+  color: #1D184E;
+}
+
+.footer__icons:hover {
+  color: #342d73;
 }
