--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,6 +110,10 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 96px;
+}
+
 h2 {
   font-size: 55px;
   line-height: 75px;
@@ -123,6 +127,11 @@ h3 {
 }
 
 h4 {
+  font-size: 24px;
+    font-weight: 400;
+}
+
+h5 {
   font-size: 18px;
   font-weight: 400;
   padding-bottom: 20px;
@@ -316,4 +325,20 @@ p {
 
 .footer__icons:hover {
   color: #342d73;
+}
+
+.project__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: linear-gradient(var(--color-primary), white);
+}
+
+.project__header__title {
+  margin-top: 100px;
+}
+
+.project__header__img {
+  padding-top: 80px;
+  padding-bottom: 50px;
 }
