--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,6 +153,12 @@ p {
   padding: 20px 35px;
   position: fixed;
   margin-bottom: 10px;
+  top: 0;
+  transition: top 0.3s;
+}
+
+.navbar--hidden {
+  top: -80px;
 }
 
 .navbar__logo {
@@ -166,6 +172,7 @@ p {
   list-style-type: none;
   display: flex;
   margin-left: auto;
+  transition: top 0.3s;
 }
 
 .navbar a {
