--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,7 +121,7 @@ h1 {
 h2 {
   font-size: 55px;
   line-height: 75px;
-  padding-bottom: 45px;
+  padding-bottom: 38px;
 }
 
 h3 {
@@ -224,14 +224,14 @@ p {
 .btn__primary {
   font-size: 16px;
   margin-top: 35px;
-  padding: 20px 40px;
+  padding: 18px 40px;
   color: var(--colour-btn-text);
-  background-color: #F0F0FF;
+  background-color: #e2e2fc;
 }
 
 .about__container {
   background-color: white;
-  padding: 80px 0px 90px 0px;
+  padding: 100px 0px 90px 0px;
 }
 
 .about {
@@ -243,6 +243,11 @@ p {
 .about__text {
   margin-right: 100px;
   line-height: 30px;
+  padding-top: 15px;
+}
+
+.about__text p {
+  padding: 0px 80px 25px 0px;
 }
 
 #h2__highlight {
@@ -272,7 +277,7 @@ p {
 }
 
 .project__container {
-  padding-bottom: 60px;
+  padding-bottom: 70px;
   display: flex;
 }
 
@@ -292,7 +297,8 @@ p {
 }
 
 .project__right__text{
-  padding-left: 100px; 
+  padding: 0px 100px;  
+  /* Right padding set to ensure text is in line with image*/
 }
 
 .project__left__text{
@@ -348,10 +354,30 @@ p {
 }
 
 .project__header__title {
-  margin-top: 100px;
+  margin-top: 145px;
 }
 
 .project__header__img {
   padding-top: 80px;
   padding-bottom: 50px;
+  max-width: 100%;
+}
+
+.about__me {
+  padding-top: 50px;
+  margin: 90px;
+}
+
+.project_page_container {
+  max-width: 100%;
+}
+
+.pantry_pal_container {
+  background-color: white;
+  padding: 0% 20%;
+  /* padding-left:20%; */
+}
+
+.pantry_pal_text {
+  padding-top: 5px;
 }
